# sentry-kernel

./: .config  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  meson.build  meson.options  requirements.txt  sonar-project.properties
.github/: SECURITY.md
.github/workflows/: codequal.yml  emulation.yml  gitguardian.yml  gnulinux.yml  macos.yml  proof.yml  reuse.yml
LICENSES/: BSD-2-Clause.txt  NIST-PD.txt
autotest/: Kconfig  meson.build
autotest/c/: meson.build
autotest/c/include/: syscall_fuzz.h
autotest/c/include/arch/asm-cortex-m/: syscall_fuzz.h
autotest/c/include/arch/asm-rv32/: syscall_fuzz.h
autotest/c/src/: main.c  meson.build  ssp.c
autotest/c/src/drivers/timer/: meson.build  stm32-basic-timer-dt.c.in  stm32-basic-timer-dt.h.in  stm32-basic-timer.c
autotest/c/src/tests/: meson.build
autotest/c/src/tests/include/: devices-dt.h.in  meson.build  shms-dt.h.in  test_respawn.h  test_syscall_fuzz.h
autotest/c/src/tests/src/: meson.build  test_capability.c.in  test_gpio.c  test_map.c  test_respawn.c  test_syscall_fuzz.c
autotest/common/: meson.build
autotest/common/arch/asm-cortex-m/: cortex-m-autotest.ld.in
autotest/rust/: meson.build
autotest/rust/src/: devices_dt.rs.in  main.rs  print.rs
autotest/rust/src/tests/: _test_dma.rs  _test_shm.rs  devices_utils.rs  log.rs  mod.rs  test_cycles.rs  test_dma.rs  test_gethandle.rs  test_gpio.rs  test_handle.rs  test_ipc.rs  test_map.rs  test_random.rs  test_shm.rs  test_signal.rs  test_sleep.rs  test_yield.rs
autotest/src/drivers/timer/: stm32-basic-timer-dt.c.in
autotest/src/tests/include/: test_capability.h
autotest/src/tests/src/: meson.build  test_dma.c
autotest/src/tests/src-rs/: Cargo.toml  devices_dt.rs.in  meson.build
autotest/src/tests/src-rs/src/: devices-dt.rs.in  devices_utils.rs  lib.rs  test_cycles.rs  test_dma.rs  test_gpio.rs  test_handle.rs  test_ipc.rs  test_irq.rs  test_log.rs  test_map.rs  test_random.rs  test_shm.rs  test_signal.rs  test_sleep.rs  test_yield.rs
configs/: nucleo_u5a5_autotest_defconfig  nucleo_u5a5_autotest_framac_defconfig  nucleo_u5a5_autotest_fuzzer_defconfig  nucleo_u5a5_autotest_harden_defconfig  nucleo_u5a5_autotest_rs_defconfig  nucleo_u5a5_nooutput_defconfig  nucleo_wb55_autotest_defconfig  qemu_rv32im_defconfig  stm32f429i_disc1_autotest_defconfig
doc/: .gitignore  meson.build
doc/concepts/: conf.py  emulator.rst  index.rst
doc/concepts/build_system/: dts.rst  targets.rst
doc/concepts/concepts/: archi_req.rst  events.rst  initial.rst  security.rst
doc/concepts/proof/: basics.rst
doc/concepts/sw_architecture/: bsp.rst  schedulers.rst  task_layout.rst  user_devices.rst
doc/concepts/uapi/: model.rst  syscalls.rst
doc/internals/: conf.py  index.rst
dts/: sentry.dtsi
dts/examples/: nucleo_l476rg_autotest.dts  nucleo_u5a5.dts  nucleo_u5a5_autotest.dts  nucleo_u5a5_autotest_harden.dts  nucleo_u5a5_autotest_rs.dts  nucleo_wb55_autotest.dts  opentitan_earlgrey.dts  rpi_pico2w_debug.dts  stm32f429i_disc1_autotest.dts
kernel/: Kconfig  meson.build
kernel/include/sentry/: job.h  ktypes.h  sched.h  syscalls.h
kernel/include/sentry/arch/asm-generic/: handler-svc-lut.h  memory.h  meson.build  platform.h  semihosting.h  tick.h
kernel/include/sentry/arch/asm-rv32/: buses.h  handler.h  io.h  membarriers.h  meson.build  mtimer.h.in  platform.h  plic.h  pmp.h  riscv-utils.h  semihosting.h  systick.h  thread.h  tick.h
kernel/proof/: meson.build
kernel/proof/proof_composition/: meson.build
kernel/proof/proof_composition/proof_mm/: kernel_map_resource.c  meson.build
kernel/proof/proof_composition/proof_zlib/: kernel_zlib.c  kernel_zlib_crypto.c  kernel_zlib_sha256.c  kernel_zlib_sort.c  kernel_zlib_string.c  meson.build
kernel/proof/proof_entrypoint/: meson.build
kernel/proof/tools/: gencoverage.py
kernel/src/: meson.build
kernel/src/arch/: Kconfig
kernel/src/drivers/: Kconfig  meson.build
kernel/src/drivers/smp/sio/: cpuid.c  meson.build  sio_private.h
kernel/src/eacsl/: eacsl.c  meson.build
kernel/src/managers/: Kconfig
kernel/src/sched/: meson.build  sched_rma.c  sched_rrmq.c
kernel/src/startup/: Kconfig  entrypoint.c
kernel/src/syscalls/: meson.build  sysgate_autotest.c  sysgate_dma_assign.c  sysgate_dma_get_info.c  sysgate_dma_resume.c  sysgate_dma_start.c  sysgate_dma_suspend.c  sysgate_dma_unassign.c  sysgate_exit.c  (+13 more)
kernel/src/zlib/: meson.build  string.c
kernel/src/zlib/crypto/: crc32.c  meson.build  pgc32.c  sha-256.c
kernel/tests/: cmocka.c
kernel/tests/test_utils/test_zlib/crypto/: meson.build  sha256_nist_parser.c  sha256_nist_parser.h  test_sha256_nist.c
schemas/task/: metadata.schema.json.cpp  sample.json  sample.toml  task_metadata.json
subprojects/: .gitignore  cmsis.wrap  devicetree.wrap  kadoc.wrap  kconfig.wrap  mini-gmp.wrap
support/meson/: riscv32im-unknown-none-elf.ini
support/scripts/: extract_code_range.py
tools/: meson.build  parseelf.py
tools/genmetadata/: meson.build
tools/genmetadata/src/: main.cpp  reflect.hpp  task_meta.hpp.in
tools/genmetadata/src/arch/: arch.hpp
tools/robot/: meson.build  sentry-autotest-fuzz.robot  sentry-autotest.robot
tools/sentry-emulator/: .gitignore  README.md  meson.build  pyproject.toml  tox.ini
tools/sentry-emulator/proto/: emulator.proto
tools/sentry-emulator/sample-rust-app/: Cargo.toml
tools/sentry-emulator/sample-rust-app/src/: lib.rs  main.rs
tools/sentry-emulator/src/camelot/: __init__.py
tools/sentry-emulator/src/camelot/sentry_emulator/: __init__.py  __main__.py  cli.py  dispatcher.py  protocol.py  server.py
tools/sentry-emulator/src/camelot/sentry_emulator/emulator_server/: __init__.py  constants.py  daemon.py  models.py  servicer.py
tools/sentry-emulator/src/camelot/sentry_emulator/grpc/: __init__.py  emulator_pb2.py  emulator_pb2_grpc.py
tools/sentry-emulator/tests/: conftest.py  test_cli.py  test_emulator.py  test_protocol.py  test_server.py
uapi/: Cargo.toml  meson.build  task.Kconfig
uapi/src/: exchange.rs  ffi_c.rs  lib.rs  meson.build  posix.rs  syscall.rs  systypes.rs
(+121 files in other folders)
