# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

# list of statically defined headers
arch_header_set.add(files(
    'handler-svc-lut.h',
    'interrupt.h',
    'layout.h',
    'membarriers.h',
    'memory.h',
    'panic.h',
    'platform.h',
    'semihosting.h',
    'sync.h',
    'thread.h',
    'tick.h',
))
